src/page/error/error-404/error-404-simple/example/index.ejs
<%
const sample = getSample(include);
%>

<%- sample('', './sample/error-404-simple', {}, true, '../../../example/layout'); %>
